<resources>
	<string name="app_name">PIN Demo</string>
	<string name="action_settings">Settings</string>

	<string name="home_title">Home</string>

	<string name="pin_error_empty">Cannot be empty</string>
	<string name="pin_error_length">PIN length should be 6 character</string>
	<string name="pin_error_invalid">Invalid PIN!</string>
	<string name="pin_input_hint">PIN</string>

</resources>
