<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/content_form"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	app:layout_behavior="@string/appbar_scrolling_view_behavior">

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="match_parent"
		android:layout_marginTop="?attr/actionBarSize"
		android:orientation="vertical"
		android:paddingLeft="20dp"
		android:paddingRight="20dp"
		android:paddingTop="60dp">

		<android.support.design.widget.TextInputLayout
			android:id="@+id/input_layout_pin"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<EditText
				android:id="@+id/input_pin"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:maxLines="1"
				android:inputType="numberPassword"
				android:hint="@string/pin_input_hint" />
		</android.support.design.widget.TextInputLayout>

	</LinearLayout>

</RelativeLayout>
